# advent-of-code

./: pyproject.toml
10/: answer.py
11/: answer.py
12/: answer.py  example.txt
13/: answer.py  example.txt
2/: answer.py
2023/1/: answer.py
2023/10/: answer.py
2023/14/: answer.py
2023/3/: answer.py
2023/5/: brute_force_answer.py
2023/8/: answer.py
3/: answer.py
4/: answer.py
5/: answer.py  input.txt
6/: answer.py
7/: answer.py
8/: answer.py
9/: answer.py
